--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<p>Hi</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <p>CICD</p>
+</body>
+
+</html>
